<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalOffice"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="503dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:text="@string/PersonalOffice"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switchSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/sex"
                android:textColorLink="#FFFFFF"
                android:textOff="@string/sex_male"
                android:textOn="@string/sex_female"
                android:textSize="18sp"
                app:showText="true" />

            <TextView
                android:id="@+id/textSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Sex" />
        </LinearLayout>

        <EditText
            android:id="@+id/numbAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/age"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/firstName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/secondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/secondName"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/saveData" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>